// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderNav should match snapshot when route does not exist 1`] = `
.c6 {
  height: 100px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #d3d3d3;
  padding: 0 20px;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border: 1px dashed #696969;
  padding: 5px 0;
  min-width: 120px;
  text-align: center;
  cursor: pointer;
}

.c2 {
  margin-left: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-left: 40px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3:first-child {
  margin-left: 0;
}

.c3:after {
  content: '';
  display: inline-block;
  width: 100%;
  height: 2px;
  margin-top: 2px;
  background-color: rgba(0,0,0,0);
}

.c3:hover:after {
  content: '';
  display: inline-block;
  width: 100%;
  height: 2px;
  visibility: 'visible';
  background-color: #696969;
}

.c5 {
  padding: 0 20px;
  width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      PRISM Logo
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
      >
        <div>
          Marketing
        </div>
      </div>
      <div
        className="c3"
        onClick={[Function]}
      >
        <div>
          Components
        </div>
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      test children
    </div>
  </div>
  <div
    className="c6"
  />
</div>
`;

exports[`HeaderNav should match snapshot when route is components/buttons 1`] = `
.c10 {
  height: 100px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #d3d3d3;
  padding: 0 20px;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border: 1px dashed #696969;
  padding: 5px 0;
  min-width: 120px;
  text-align: center;
  cursor: pointer;
}

.c2 {
  margin-left: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-left: 40px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3:first-child {
  margin-left: 0;
}

.c3:after {
  content: '';
  display: inline-block;
  width: 100%;
  height: 2px;
  margin-top: 2px;
  background-color: rgba(0,0,0,0);
}

.c3:hover:after {
  content: '';
  display: inline-block;
  width: 100%;
  height: 2px;
  visibility: 'visible';
  background-color: #696969;
}

.c4 {
  margin-left: 40px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4:first-child {
  margin-left: 0;
}

.c4:after {
  content: '';
  display: inline-block;
  width: 100%;
  height: 2px;
  margin-top: 2px;
  background-color: blue;
}

.c4:hover:after {
  content: '';
  display: inline-block;
  width: 100%;
  height: 2px;
  visibility: 'visible';
  background-color: blue;
}

.c6 {
  width: 200px;
  min-height: 200px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  background-color: #939393;
}

.c7 {
  padding: 20px 30px;
  font-size: 20px;
  cursor: pointer;
  background-color: #7e7e7e;
  font-weight: bold;
}

.c7:hover {
  background-color: #bdbdbd;
}

.c8 {
  padding: 20px 30px;
  font-size: 20px;
  cursor: pointer;
}

.c8:hover {
  background-color: #bdbdbd;
}

.c9 {
  padding: 0 20px;
  width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      PRISM Logo
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
      >
        <div>
          Marketing
        </div>
      </div>
      <div
        className="c4"
        onClick={[Function]}
      >
        <div>
          Components
        </div>
      </div>
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <div
        className="c7"
        onClick={[Function]}
      >
        Buttons
      </div>
      <div
        className="c8"
        onClick={[Function]}
      >
        Icons
      </div>
    </div>
    <div
      className="c9"
    >
      test children
    </div>
  </div>
  <div
    className="c10"
  />
</div>
`;

exports[`HeaderNav should match snapshot when route is root 1`] = `
.c6 {
  height: 100px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #d3d3d3;
  padding: 0 20px;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  border: 1px dashed #696969;
  padding: 5px 0;
  min-width: 120px;
  text-align: center;
  cursor: pointer;
}

.c2 {
  margin-left: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-left: 40px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3:first-child {
  margin-left: 0;
}

.c3:after {
  content: '';
  display: inline-block;
  width: 100%;
  height: 2px;
  margin-top: 2px;
  background-color: rgba(0,0,0,0);
}

.c3:hover:after {
  content: '';
  display: inline-block;
  width: 100%;
  height: 2px;
  visibility: 'visible';
  background-color: #696969;
}

.c5 {
  padding: 0 20px;
  width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      PRISM Logo
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
      >
        <div>
          Marketing
        </div>
      </div>
      <div
        className="c3"
        onClick={[Function]}
      >
        <div>
          Components
        </div>
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      test children
    </div>
  </div>
  <div
    className="c6"
  />
</div>
`;
